--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
+diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
+dotenv = "0.15.0"
