--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ serde_json = "1.0.111"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
 dotenv = "0.15.0"
-rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
+rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "blob"] }
+sqlite-vss = { version = "0.1.2", features = ["download-libs"] }
